--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ install:
   - pip install -r requirements.txt
   - python setup.py develop
 
+before_script:
+  - source stackoverflow/.travis.sh
+
 script:
   - cd stackoverflow/api/v1
   - py.test --cov=stackoverflow tests/
