--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==3.0.2
+astroid==2.0.4
 atomicwrites==1.1.5
 attrs==18.1.0
 autoenv==1.0.0
@@ -21,6 +22,7 @@ Flask-Testing==0.7.1
 greenlet==0.4.14
 gunicorn==19.7.1
 idna==2.7
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
@@ -28,11 +30,13 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.2.0
+pep8==1.7.1
 pluggy==0.6.0
 psycopg2==2.7.3.2
 py==1.5.4
 pycparser==2.18
 PyJWT==1.6.4
+pylint==2.1.1
 pytest==3.6.3
 pytest-cov==2.5.1
 python-coveralls==2.9.1
@@ -42,6 +46,7 @@ pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
 six==1.11.0
+typed-ast==1.1.0
 urllib3==1.23
 Werkzeug==0.14.1
 wrapt==1.10.11
