--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.2.0
 pep8==1.7.1
+pkg-resources==0.0.0
 pluggy==0.6.0
 psycopg2==2.7.3.2
 py==1.5.4
